@@ -1,3 +1,9 @@
+2002-11-04  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.in (AM_INIT_AUTOMAKE): Bump version.
+	* doc/TODO: Updated.
+	* include/avr/sleep.h: New file.
+
 2002-10-31  Theodore A. Roth  <troth@openavr.org>
 
 	* configure.in (AM_INIT_AUTOMAKE): Bump version.
